What's New in Python 2.2b2?
XXX Planned XXX Release date: 14-Nov-2001
===========================

Type/class unification and new-style classes

- Assignment to object.__dict__ is now possible, for objects that are
  instances of new-style classes that have a __dict__ (unless the base
  class forbids it).

- dictionary() now accepts an iterable object producing 2-sequences.
  For example, dictionary(d.items()) == d for any dictionary d.  The
  argument, and the elements of the argument, can be any iterable
  objects.

- Methods of built-in types now properly check for keyword arguments
  (formerly these were silently ignored).  The only built-in methods
  that take keyword arguments are __call__, __init__ and __new__.

- The socket function has been converted to a type; see below.

Core and builtins

- Clarified the error messages for unsupported operands to an operator
  (like 1 + '').

Extension modules

- The socket module defines a new method for socket objects,
  sendall().  This is like send() but may make multiple calls to
  send() until all data has been sent.  Also, the socket function has
  been converted to a subclassable type, like list and tuple (etc.)
  before it; socket and SocketType are now the same thing.

- Various bugfixes to the curses module.  There is now a test suite
  for the curses module (you have to run it manually).

Library

- Traceback objects are now scanned by cyclic garbage collection, so
  cycles created by casual use of sys.exc_info() no longer cause
  permanent memory leaks (provided garbage collection is enabled).

- os.extsep -- a new variable needed by the RISCOS support.  It is the
  separator used by extensions, and is '.' on all platforms except
  RISCOS, where it is '/'.  There is no need to use this variable
  unless you have a masochistic desire to port your code to RISCOS.

Tools/Demos

Build

C API

- New function PySequence_Fast_GET_SIZE() returns the size of a non-